--- a/index.html
+++ b/index.html
@@ -1,65 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shubham | Automation Test Engineer</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Shubham Giri | QA Automation Engineer</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
     <header>
         <h1>Shubham Giri</h1>
-        <p>Senior QA Engineer | C# | Selenium | Playwright | API Testing</p>
+        <p>QA Automation Engineer | 7.10+ Years Experience | Selenium, Playwright, SpecFlow</p>
     </header>
 
-    <section class="about">
-        <h2>About Me</h2>
-        <p>I am a test automation engineer with 7+ years of experience in Selenium (C#), Playwright, API testing, and framework design. Currently working at Civica Resource Pvt. Ltd.</p>
+    <section>
+        <h2>Professional Summary</h2>
+        <p>
+            Detail-oriented QA Automation Test Engineer with over 7.10+ years of experience in designing, developing and executing comprehensive test strategies for web, desktop and API-based applications in Agile/DevOps environments. Built robust automation frameworks using Selenium WebDriver, Playwright and SpecFlow (BDD) with Java, C# (.NET). Skilled in aligning automation with business goals, reducing manual regression effort by 60%, maintaining <10% defect leakage, and accelerating delivery with scalable test design.
+        </p>
     </section>
 
-    <section class="skills">
+    <section>
         <h2>Skills</h2>
+        <div class="skills-grid">
+            <div><strong>Automation Tools:</strong> Selenium, Playwright, AutoIt, SpecFlow, TestNG, RestAPI (Postman, RestSharp, HttpClient)</div>
+            <div><strong>Frameworks:</strong> POM, Data-Driven, BDD, Gherkin</div>
+            <div><strong>Languages:</strong> Java, C#, Python, TypeScript</div>
+            <div><strong>CI/CD:</strong> Azure DevOps, Jenkins, TeamCity</div>
+            <div><strong>Version Control:</strong> Git</div>
+            <div><strong>Reporting & Logging:</strong> Extent Reports, Log4j, TestNG Listeners</div>
+            <div><strong>Build Tools:</strong> Maven, NuGet</div>
+            <div><strong>IDEs:</strong> Visual Studio, Eclipse</div>
+            <div><strong>Database:</strong> SQL Server</div>
+            <div><strong>Code Quality:</strong> SonarQube, SonarLint, Jacoco</div>
+            <div><strong>Methodologies:</strong> Agile, Scrum, STLC, SDLC</div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Work History</h2>
+        <h3>Test Engineer – Civica Resource Pvt. Ltd. (03/2020 - Present)</h3>
         <ul>
-            <li>C#, Selenium, SpecFlow</li>
-            <li>Playwright with TypeScript</li>
-            <li>REST API Automation (Postman, MSTest)</li>
-            <li>CI/CD Integration (Azure DevOps)</li>
+            <li>Designed and maintained automated test suites for regression, smoke, and UAT testing</li>
+            <li>Participated in Agile ceremonies and DevOps CI/CD validations</li>
+            <li>Collaborated with cross-functional teams on peer reviews and production support</li>
+        </ul>
+
+        <h3>Software Test Engineer – Ingecno Technologies (09/2017 - 03/2020)</h3>
+        <ul>
+            <li>Created end-to-end test cases for web and backend systems</li>
+            <li>Contributed to automation script creation and reviewed test artifacts</li>
+            <li>Executed test cycles and participated in defect triage meetings</li>
         </ul>
     </section>
 
-    <section class="projects">
+    <section>
         <h2>Projects</h2>
         <ul>
-            <li><a href="https://github.com/your-github/demo-framework">Dynamic Test Framework with Resx Data</a></li>
-            <li><a href="https://github.com/your-github/api-test-automation">API Testing Automation Suite</a></li>
+            <li><strong>HealthCare:</strong> Managed policy types, claims, and payments for major health funds</li>
+            <li><strong>View:</strong> Civil enforcement system for case and debtor management</li>
+            <li><strong>LES-Education:</strong> Platform to enhance academic and staff services</li>
+            <li><strong>Shoppers:</strong> Online shopping cart application</li>
+            <li><strong>Hot Desk Booking:</strong> Workspace tracking and booking tool</li>
         </ul>
     </section>
 
-    <section class="contact">
-        <h2>Contact</h2>
-        <p>Email: shubhamgiri602@gmail.com</p>
-        <p>Phone: +91-8767548429</p>
+    <section>
+        <h2>Education</h2>
+        <ul>
+            <li><strong>B.E. Electronics & Telecommunication</strong> – Sinhagad Institute of Technology, 2017</li>
+            <li><strong>Diploma</strong> – P R Patil Polytechnic, 2014</li>
+            <li><strong>SSC</strong> – D R Patil High School, 2011</li>
+        </ul>
     </section>
 
-    <section class="download">
-        <h2>Download Resume</h2>
-        <a href="SHUBHAM_GIRI_AUTOMATION_TEST_ENGINEER.pdf" download class="btn">
-            📄 Download Resume (PDF)
-        </a>
+    <section>
+        <h2>Notable Contributions</h2>
+        <ul>
+            <li>Created token-based dynamic data resolution for SpecFlow + Selenium + C#</li>
+            <li>Wrapped WebElements for consistent waits and interactions</li>
+            <li>Enabled PDF/ZIP validation in automation pipelines</li>
+            <li>Developed ADO seed scripts for accurate user provisioning</li>
+            <li>Centralized wait helpers for AJAX loaders and dynamic content</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Languages</h2>
+        <p>Marathi, Hindi, English</p>
     </section>
 
     <footer>
-        <div class="badge-base LI-profile-badge"
-             data-locale="en_US"
-             data-size="medium"
-             data-theme="light"
-             data-type="HORIZONTAL"
-             data-vanity="isrg"
-             data-version="v1">
-        </div>
+        <p>© 2025 Shubham Giri | Online Resume</p>
     </footer>
-
 </body>
 </html>
