--- a/index.html
+++ b/index.html
@@ -1,96 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Shubham Giri | QA Automation Engineer</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shubham Giri | QA Automation Engineer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Shubham Giri</h1>
-        <p>QA Automation Engineer | 7.10+ Years Experience | Selenium, Playwright, SpecFlow</p>
-    </header>
+  <header>
+    <h1>Shubham Giri</h1>
+    <p>QA Automation Engineer | 7.10+ Years Experience | Automation Testing, Test Data Driven Testing, Manual Testing, Database Testing, API Testing</p>
+    <div class="toolbar">
+      <button onclick="toggleMode()">Toggle Theme</button>
+      <button onclick="window.print()">Download PDF</button>
+    </div>
+  </header>
+
+  <section>
+    <h2>Professional Summary</h2>
+    <p>Detail-oriented QA Automation Test Engineer with over 7.10+ years of experience in designing,
+developing and executing comprehensive test strategies for web, desktop and API-based
+applications in Agile/DevOps environments and Built robust and scalable automation
+frameworks using Selenium WebDriver, Playwright and SpecFlow (BDD) with Java, C#(.Net).
+Skilled in aligning automation practices with business objectives to ensure faster releases,
+improved test coverage and decreased defect leakage. Proficient in building data-driven, POM-
+based and behavior-driven test frameworks integrated seamlessly into CI/CD pipelines using
+Azure DevOps, Jenkins and TeamCity. Familiar with API testing concepts and tools, SQL-based
+backend validation and implementing code quality practices with SonarQube, SonarLint, Jacoco
+and log4j. Utilized AI-driven solutions for efficient test script generation, self-healing selectors,
+dynamic test flow optimization and automated debugging to enhance test reliability and
+efficiency. Recognized for reducing manual regression effort by 60%, maintaining less than 10%
+defect leakage and accelerating test execution through optimized automation practices that
+support high-velocity software delivery.</p>
+  </section>
 
     <section>
-        <h2>Professional Summary</h2>
-        <p>
-            Detail-oriented QA Automation Test Engineer with over 7.10+ years of experience in designing, developing and executing comprehensive test strategies for web, desktop and API-based applications in Agile/DevOps environments. Built robust automation frameworks using Selenium WebDriver, Playwright and SpecFlow (BDD) with Java, C# (.NET). Skilled in aligning automation with business goals, reducing manual regression effort by 60%, maintaining <10% defect leakage, and accelerating delivery with scalable test design.
-        </p>
-    </section>
+<h2>Skills</h2>
+<div class="skills-grid">
+<div><strong>Automation Tools & Frameworks:</strong> Selenium WebDriver, Playwright, AutoIt, SpecFlow (BDD), TestNG, RestAPI (Postman, RestSharp, HttpClient)</div>
+<div><strong>Framework Design & Testing Approaches:</strong> Page Object Model (POM), Data-Driven Testing, Behavior-Driven Development (BDD), Gherkin Syntax</div>
+<div><strong>Version Control:</strong> Git</div>
+<div><strong>Reporting & Logging Tools:</strong> Extent Reports, Log4j, TestNG Listeners</div>
+<div><strong>Build & Dependency Management:</strong> Maven, NuGet</div>
+<div><strong>Programming Languages:</strong> Java, C# (.Net), Python, TypeScript</div>
+<div><strong>CI/CD:</strong> Azure DevOps (ADO), Jenkins, TeamCity</div>
+<div><strong>IDEs:</strong> Visual Studio, Eclipse</div>
+<div><strong>Database & Backend Validation:</strong> Microsoft SQL Server, SQL Queries</div>
+<div><strong>Code Quality & Coverage Tools:</strong> SonarLint, SonarQube, Jacoco, IntelliSense, AI</div>
+<div><strong>Methodologies & Processes:</strong> Agile (Scrum, Sprint Planning, Daily Stand-Ups, Retrospectives), SDLC, STLC, BLC</div>
+  </section>
 
-    <section>
-        <h2>Skills</h2>
-        <div class="skills-grid">
-            <div><strong>Automation Tools:</strong> Selenium, Playwright, AutoIt, SpecFlow, TestNG, RestAPI (Postman, RestSharp, HttpClient)</div>
-            <div><strong>Frameworks:</strong> POM, Data-Driven, BDD, Gherkin</div>
-            <div><strong>Languages:</strong> Java, C#, Python, TypeScript</div>
-            <div><strong>CI/CD:</strong> Azure DevOps, Jenkins, TeamCity</div>
-            <div><strong>Version Control:</strong> Git</div>
-            <div><strong>Reporting & Logging:</strong> Extent Reports, Log4j, TestNG Listeners</div>
-            <div><strong>Build Tools:</strong> Maven, NuGet</div>
-            <div><strong>IDEs:</strong> Visual Studio, Eclipse</div>
-            <div><strong>Database:</strong> SQL Server</div>
-            <div><strong>Code Quality:</strong> SonarQube, SonarLint, Jacoco</div>
-            <div><strong>Methodologies:</strong> Agile, Scrum, STLC, SDLC</div>
-        </div>
-    </section>
+  <section>
+    <h2>Work History</h2>
+    <h3>Test Engineer – Civica Resource Pvt. Ltd. (03/2020 - Present)</h3>
+    <ul>
+  <li>Analyze, estimate, and design test cases including test data and scripting steps for both manual and automation testing</li>
+  <li>Prepare, execute, and validate test cases across non-prod and production pipeline environments</li>
+  <li>Maintain and update automated test suites for regression, smoke, end to end, UAT and functional testing</li>
+  <li>Participate in daily stand-ups, update SharePoint trackers, manage sprint efforts and track task progress using Agile methodologies</li>
+  <li>Collaborate with teams for peer and pull request reviews, ensuring code quality and functionality before deployment</li>
+  <li>Handle real-time troubleshooting by taking ad hoc calls, investigating issues, and providing quick resolutions with documented test evidence</li>
+  <li>Conduct impact analysis and maintain traceability for test coverage, bugs, and change requests</li>
+  <li>Improve and maintain test documentation, including reusable components and test frameworks</li>
+  <li>Engage in CI/CD pipeline validation, supporting DevOps integration testing</li>
+  <li>Support test planning and release readiness by providing input on test effort estimation, risk identification</li>
+</ul>
 
-    <section>
-        <h2>Work History</h2>
-        <h3>Test Engineer – Civica Resource Pvt. Ltd. (03/2020 - Present)</h3>
-        <ul>
-            <li>Designed and maintained automated test suites for regression, smoke, and UAT testing</li>
-            <li>Participated in Agile ceremonies and DevOps CI/CD validations</li>
-            <li>Collaborated with cross-functional teams on peer reviews and production support</li>
-        </ul>
+    <h3>Software Test Engineer – Ingecno Technologies (09/2017 - 03/2020)</h3>
+<ul>
+  <li>Created and executed end-to-end test scenarios for web and backend systems in non-prod and prod environments</li>
+  <li>Participated in requirement analysis and sprint planning sessions to provide accurate estimations for testing efforts</li>
+  <li>Executed manual test cycles and contributed to automation tasks for reusable scripts and smoke tests</li>
+  <li>Tracked and updated test progress, effort hours, and task status using SharePoint and Agile tools</li>
+  <li>Logged and verified bugs, conducted impact assessments, and collaborated closely with developers to ensure timely fixes</li>
+  <li>Reviewed test cases and provided constructive feedback during peer reviews to uphold QA standards and consistency</li>
+  <li>Prepared and shared detailed test reports, defect metrics, and test summaries for stakeholder review</li>
+  <li>Supported multiple project releases by participating in release validation, regression cycles, and environment setup coordination</li>
+</ul>
+  </section>
 
-        <h3>Software Test Engineer – Ingecno Technologies (09/2017 - 03/2020)</h3>
-        <ul>
-            <li>Created end-to-end test cases for web and backend systems</li>
-            <li>Contributed to automation script creation and reviewed test artifacts</li>
-            <li>Executed test cycles and participated in defect triage meetings</li>
-        </ul>
-    </section>
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>HealthCare:</strong> Health fund policy/claim management</li>
+      <li><strong>View:</strong> Civil enforcement case system</li>
+      <li><strong>LES-Education:</strong> Academic/staff management</li>
+      <li><strong>Shoppers:</strong> Retail shopping cart platform</li>
+      <li><strong>Hot Desk Booking:</strong> Shared workspace management</li>
+    </ul>
+  </section>
 
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>HealthCare:</strong> Managed policy types, claims, and payments for major health funds</li>
-            <li><strong>View:</strong> Civil enforcement system for case and debtor management</li>
-            <li><strong>LES-Education:</strong> Platform to enhance academic and staff services</li>
-            <li><strong>Shoppers:</strong> Online shopping cart application</li>
-            <li><strong>Hot Desk Booking:</strong> Workspace tracking and booking tool</li>
-        </ul>
-    </section>
+  <section>
+    <h2>Education</h2>
+    <ul>
+  <li>
+    <strong>Bachelor of Engineering:</strong> Electronics And Telecommunication, Sinhagad Institute Of Technology – Lonavla, India (2017)
+  </li>
+  <li>
+    <strong>Diploma:</strong> Electronics And Telecommunication, P R Patil Institute Of Polytechnic – Talegaon SP, India (2014)
+  </li>
+  <li>
+    <strong>SSC:</strong> General Studies, D R Patil High School – Akola, India (2011)
+  </li>
+</ul>
+  </section>
 
-    <section>
-        <h2>Education</h2>
-        <ul>
-            <li><strong>B.E. Electronics & Telecommunication</strong> – Sinhagad Institute of Technology, 2017</li>
-            <li><strong>Diploma</strong> – P R Patil Polytechnic, 2014</li>
-            <li><strong>SSC</strong> – D R Patil High School, 2011</li>
-        </ul>
-    </section>
+  <section>
+    <h2>Notable Contributions</h2>
+   <div class="skill-section">
+  <div class="skill-header" onclick="toggleSkill(this)">Notable Contributions</div>
+  <div class="skill-content">
+    <ul>
+      <li>Implemented permission-level design for single user centric function controls and ADO DB seed scripting to ensure accurate and secure user provisioning.</li>
+      <li>Developed address-level automation logic, facilitating dynamic assignment of officers based on hierarchical structures within geographic domains, improving operational efficiency.</li>
+      <li>Enabled automation feasibility for .ZIP and PDF file validation, making it possible to automate core functionalities such as letter correspondence workflows and Crystal Reports generation, resulting in improved test coverage and streamlined regression testing.</li>
+      <li>Implemented dynamic key-pair test data resolution using token-based scripting (e.g., <code>{LoginUsername}</code> or <code>Login.Password</code>) in a scalable Selenium + SpecFlow + C# framework. Designed a runtime parser to fetch environment-specific values from .resx files, ensuring clean separation of test logic and data and enhancing test reusability and maintainability.</li>
+      <li>Implemented a WebElement wrapper class to standardize interactions with common UI elements such as dropdowns, buttons, and input fields. Included built-in waits, exception handling to improve test stability, reduce code duplication, and simplify step definitions.</li>
+      <li>Implemented a strategy to centralize explicit waits by creating reusable wait helper methods (e.g., <code>GetWebElementSelector</code>) and using them at the page class level instead of directly in step definitions. Handled dynamic elements, AJAX calls, and loaders through intelligent wait conditions. Followed best practices by defining private locator variables within page classes to avoid duplication and improve maintainability.</li>
+    </ul>
+  </div>
+</div>
+  </section>
 
-    <section>
-        <h2>Notable Contributions</h2>
-        <ul>
-            <li>Created token-based dynamic data resolution for SpecFlow + Selenium + C#</li>
-            <li>Wrapped WebElements for consistent waits and interactions</li>
-            <li>Enabled PDF/ZIP validation in automation pipelines</li>
-            <li>Developed ADO seed scripts for accurate user provisioning</li>
-            <li>Centralized wait helpers for AJAX loaders and dynamic content</li>
-        </ul>
-    </section>
+  <section>
+    <h2>Languages</h2>
+    <p>Marathi, Hindi, English</p>
+  </section>
 
-    <section>
-        <h2>Languages</h2>
-        <p>Marathi, Hindi, English</p>
-    </section>
+  <footer>
+    <p>© 2025 Shubham Giri | Online Resume</p>
+  </footer>
 
-    <footer>
-        <p>© 2025 Shubham Giri | Online Resume</p>
-    </footer>
+  <script>
+    function toggleMode() {
+      document.body.classList.toggle("dark-mode");
+    }
+  </script>
 </body>
 </html>
