Update index.html file

--- a/index.html
+++ b/index.html
@@ -34,49 +34,71 @@ defect leakage and accelerating test execution through optimized automation prac
 support high-velocity software delivery.</p>
   </section>
 
-    <section>
-<h2>Skills</h2>
-<div class="skills-grid">
-<div><strong>Automation Tools & Frameworks:</strong> Selenium WebDriver, Playwright, AutoIt, SpecFlow (BDD), TestNG, RestAPI (Postman, RestSharp, HttpClient)</div>
-<div><strong>Framework Design & Testing Approaches:</strong> Page Object Model (POM), Data-Driven Testing, Behavior-Driven Development (BDD), Gherkin Syntax</div>
-<div><strong>Version Control:</strong> Git</div>
-<div><strong>Reporting & Logging Tools:</strong> Extent Reports, Log4j, TestNG Listeners</div>
-<div><strong>Build & Dependency Management:</strong> Maven, NuGet</div>
-<div><strong>Programming Languages:</strong> Java, C# (.Net), Python, TypeScript</div>
-<div><strong>CI/CD:</strong> Azure DevOps (ADO), Jenkins, TeamCity</div>
-<div><strong>IDEs:</strong> Visual Studio, Eclipse</div>
-<div><strong>Database & Backend Validation:</strong> Microsoft SQL Server, SQL Queries</div>
-<div><strong>Code Quality & Coverage Tools:</strong> SonarLint, SonarQube, Jacoco, IntelliSense, AI</div>
-<div><strong>Methodologies & Processes:</strong> Agile (Scrum, Sprint Planning, Daily Stand-Ups, Retrospectives), SDLC, STLC, BLC</div>
+  <section>
+    <h2>Skills</h2>
+    <div class="skill-section">
+      <div class="skill-header" onclick="toggleSkill(this)">Automation Tools & Frameworks</div>
+      <div class="skill-content">Selenium WebDriver, Playwright, AutoIt, SpecFlow (BDD), TestNG, RestAPI (Postman, RestSharp, HttpClient)</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Framework Design & Testing Approaches</div>
+      <div class="skill-content">Page Object Model (POM), Data-Driven Testing, Behavior-Driven Development (BDD), Gherkin Syntax</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Version Control</div>
+      <div class="skill-content">Git</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Reporting & Logging Tools</div>
+      <div class="skill-content">Extent Reports, Log4j, TestNG Listeners</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Build & Dependency Management</div>
+      <div class="skill-content">Maven, NuGet</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Programming Languages</div>
+      <div class="skill-content">Java, C# (.Net), Python, TypeScript</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">CI/CD</div>
+      <div class="skill-content">Azure DevOps (ADO), Jenkins, TeamCity</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">IDEs</div>
+      <div class="skill-content">Visual Studio, Eclipse</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Database & Backend Validation</div>
+      <div class="skill-content">Microsoft SQL Server, SQL Queries</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Code Quality & Coverage Tools</div>
+      <div class="skill-content">SonarLint, SonarQube, Jacoco, IntelliSense, AI</div>
+
+      <div class="skill-header" onclick="toggleSkill(this)">Methodologies & Processes</div>
+      <div class="skill-content">Agile (Scrum, Sprint Planning, Daily Stand-Ups, Retrospectives), SDLC, STLC, BLC</div>
+    </div>
   </section>
 
   <section>
     <h2>Work History</h2>
     <h3>Test Engineer – Civica Resource Pvt. Ltd. (03/2020 - Present)</h3>
     <ul>
-  <li>Analyze, estimate, and design test cases including test data and scripting steps for both manual and automation testing</li>
-  <li>Prepare, execute, and validate test cases across non-prod and production pipeline environments</li>
-  <li>Maintain and update automated test suites for regression, smoke, end to end, UAT and functional testing</li>
-  <li>Participate in daily stand-ups, update SharePoint trackers, manage sprint efforts and track task progress using Agile methodologies</li>
-  <li>Collaborate with teams for peer and pull request reviews, ensuring code quality and functionality before deployment</li>
-  <li>Handle real-time troubleshooting by taking ad hoc calls, investigating issues, and providing quick resolutions with documented test evidence</li>
-  <li>Conduct impact analysis and maintain traceability for test coverage, bugs, and change requests</li>
-  <li>Improve and maintain test documentation, including reusable components and test frameworks</li>
-  <li>Engage in CI/CD pipeline validation, supporting DevOps integration testing</li>
-  <li>Support test planning and release readiness by providing input on test effort estimation, risk identification</li>
-</ul>
+      <li>Analyze, estimate, and design test cases including test data and scripting steps for both manual and automation testing</li>
+      <li>Prepare, execute, and validate test cases across non-prod and production pipeline environments</li>
+      <li>Maintain and update automated test suites for regression, smoke, end to end, UAT and functional testing</li>
+      <li>Participate in daily stand-ups, update SharePoint trackers, manage sprint efforts and track task progress using Agile methodologies</li>
+      <li>Collaborate with teams for peer and pull request reviews, ensuring code quality and functionality before deployment</li>
+      <li>Handle real-time troubleshooting by taking ad hoc calls, investigating issues, and providing quick resolutions with documented test evidence</li>
+      <li>Conduct impact analysis and maintain traceability for test coverage, bugs, and change requests</li>
+      <li>Improve and maintain test documentation, including reusable components and test frameworks</li>
+      <li>Engage in CI/CD pipeline validation, supporting DevOps integration testing</li>
+      <li>Support test planning and release readiness by providing input on test effort estimation, risk identification</li>
+    </ul>
 
     <h3>Software Test Engineer – Ingecno Technologies (09/2017 - 03/2020)</h3>
-<ul>
-  <li>Created and executed end-to-end test scenarios for web and backend systems in non-prod and prod environments</li>
-  <li>Participated in requirement analysis and sprint planning sessions to provide accurate estimations for testing efforts</li>
-  <li>Executed manual test cycles and contributed to automation tasks for reusable scripts and smoke tests</li>
-  <li>Tracked and updated test progress, effort hours, and task status using SharePoint and Agile tools</li>
-  <li>Logged and verified bugs, conducted impact assessments, and collaborated closely with developers to ensure timely fixes</li>
-  <li>Reviewed test cases and provided constructive feedback during peer reviews to uphold QA standards and consistency</li>
-  <li>Prepared and shared detailed test reports, defect metrics, and test summaries for stakeholder review</li>
-  <li>Supported multiple project releases by participating in release validation, regression cycles, and environment setup coordination</li>
-</ul>
+    <ul>
+      <li>Created and executed end-to-end test scenarios for web and backend systems in non-prod and prod environments</li>
+      <li>Participated in requirement analysis and sprint planning sessions to provide accurate estimations for testing efforts</li>
+      <li>Executed manual test cycles and contributed to automation tasks for reusable scripts and smoke tests</li>
+      <li>Tracked and updated test progress, effort hours, and task status using SharePoint and Agile tools</li>
+      <li>Logged and verified bugs, conducted impact assessments, and collaborated closely with developers to ensure timely fixes</li>
+      <li>Reviewed test cases and provided constructive feedback during peer reviews to uphold QA standards and consistency</li>
+      <li>Prepared and shared detailed test reports, defect metrics, and test summaries for stakeholder review</li>
+      <li>Supported multiple project releases by participating in release validation, regression cycles, and environment setup coordination</li>
+    </ul>
   </section>
 
   <section>
@@ -93,33 +115,27 @@ support high-velocity software delivery.</p>
   <section>
     <h2>Education</h2>
     <ul>
-  <li>
-    <strong>Bachelor of Engineering:</strong> Electronics And Telecommunication, Sinhagad Institute Of Technology – Lonavla, India (2017)
-  </li>
-  <li>
-    <strong>Diploma:</strong> Electronics And Telecommunication, P R Patil Institute Of Polytechnic – Talegaon SP, India (2014)
-  </li>
-  <li>
-    <strong>SSC:</strong> General Studies, D R Patil High School – Akola, India (2011)
-  </li>
-</ul>
+      <li><strong>Bachelor of Engineering:</strong> Electronics And Telecommunication, Sinhagad Institute Of Technology – Lonavla, India (2017)</li>
+      <li><strong>Diploma:</strong> Electronics And Telecommunication, P R Patil Institute Of Polytechnic – Talegaon SP, India (2014)</li>
+      <li><strong>SSC:</strong> General Studies, D R Patil High School – Akola, India (2011)</li>
+    </ul>
   </section>
 
   <section>
     <h2>Notable Contributions</h2>
-   <div class="skill-section">
-  <div class="skill-header" onclick="toggleSkill(this)">Notable Contributions</div>
-  <div class="skill-content">
-    <ul>
-      <li>Implemented permission-level design for single user centric function controls and ADO DB seed scripting to ensure accurate and secure user provisioning.</li>
-      <li>Developed address-level automation logic, facilitating dynamic assignment of officers based on hierarchical structures within geographic domains, improving operational efficiency.</li>
-      <li>Enabled automation feasibility for .ZIP and PDF file validation, making it possible to automate core functionalities such as letter correspondence workflows and Crystal Reports generation, resulting in improved test coverage and streamlined regression testing.</li>
-      <li>Implemented dynamic key-pair test data resolution using token-based scripting (e.g., <code>{LoginUsername}</code> or <code>Login.Password</code>) in a scalable Selenium + SpecFlow + C# framework. Designed a runtime parser to fetch environment-specific values from .resx files, ensuring clean separation of test logic and data and enhancing test reusability and maintainability.</li>
-      <li>Implemented a WebElement wrapper class to standardize interactions with common UI elements such as dropdowns, buttons, and input fields. Included built-in waits, exception handling to improve test stability, reduce code duplication, and simplify step definitions.</li>
-      <li>Implemented a strategy to centralize explicit waits by creating reusable wait helper methods (e.g., <code>GetWebElementSelector</code>) and using them at the page class level instead of directly in step definitions. Handled dynamic elements, AJAX calls, and loaders through intelligent wait conditions. Followed best practices by defining private locator variables within page classes to avoid duplication and improve maintainability.</li>
-    </ul>
-  </div>
-</div>
+    <div class="skill-section">
+      <div class="skill-header" onclick="toggleSkill(this)">Notable Contributions</div>
+      <div class="skill-content">
+        <ul>
+          <li>Implemented permission-level design for single user centric function controls and ADO DB seed scripting to ensure accurate and secure user provisioning.</li>
+          <li>Developed address-level automation logic, facilitating dynamic assignment of officers based on hierarchical structures within geographic domains, improving operational efficiency.</li>
+          <li>Enabled automation feasibility for .ZIP and PDF file validation, making it possible to automate core functionalities such as letter correspondence workflows and Crystal Reports generation, resulting in improved test coverage and streamlined regression testing.</li>
+          <li>Implemented dynamic key-pair test data resolution using token-based scripting (e.g., <code>{LoginUsername}</code> or <code>Login.Password</code>) in a scalable Selenium + SpecFlow + C# framework. Designed a runtime parser to fetch environment-specific values from .resx files, ensuring clean separation of test logic and data and enhancing test reusability and maintainability.</li>
+          <li>Implemented a WebElement wrapper class to standardize interactions with common UI elements such as dropdowns, buttons, and input fields. Included built-in waits, exception handling to improve test stability, reduce code duplication, and simplify step definitions.</li>
+          <li>Implemented a strategy to centralize explicit waits by creating reusable wait helper methods (e.g., <code>GetWebElementSelector</code>) and using them at the page class level instead of directly in step definitions. Handled dynamic elements, AJAX calls, and loaders through intelligent wait conditions. Followed best practices by defining private locator variables within page classes to avoid duplication and improve maintainability.</li>
+        </ul>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -134,6 +150,11 @@ support high-velocity software delivery.</p>
   <script>
     function toggleMode() {
       document.body.classList.toggle("dark-mode");
+    }
+
+    function toggleSkill(element) {
+      const content = element.nextElementSibling;
+      content.style.display = content.style.display === "block" ? "none" : "block";
     }
   </script>
 </body>
